[gd_scene load_steps=10 format=3 uid="uid://yfu4xjhobuqb"]

[ext_resource type="Script" uid="uid://dlfg5q3l2g40" path="res://component.gd" id="1_vwh44"]
[ext_resource type="Theme" uid="uid://cnm886uwig4ku" path="res://themes/PlaintextTheme.tres" id="2_cyri3"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8xu3x"]
resource_local_to_scene = true
friction = 0.5
bounce = 0.5
absorbent = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vvs8"]
bg_color = Color(0.752941, 0.87451, 0.898039, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2vvs8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ykgni"]
bg_color = Color(0.556863, 0.803922, 0.823529, 1)

[sub_resource type="Theme" id="Theme_ykgni"]
Button/styles/hover = SubResource("StyleBoxFlat_2vvs8")
Button/styles/normal = SubResource("StyleBoxEmpty_2vvs8")
Button/styles/pressed = SubResource("StyleBoxFlat_ykgni")

[sub_resource type="ButtonGroup" id="ButtonGroup_vwh44"]
resource_name = "Comp_Button"
allow_unpress = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vvs8"]
size = Vector2(50, 50)

[node name="Component" type="RigidBody2D"]
texture_filter = 2
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_8xu3x")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_vwh44")

[node name="Button" type="Button" parent="."]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_ykgni")
toggle_mode = true
button_group = SubResource("ButtonGroup_vwh44")

[node name="Photo" type="Sprite2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(1, 0.75)
shape = SubResource("RectangleShape2D_2vvs8")

[node name="NameLabel" type="RichTextLabel" parent="."]
offset_left = -50.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 81.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_cyri3")
theme_override_colors/default_color = Color(0.321569, 0.305882, 0.301961, 1)
text = "Some Text"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
